# cloudkey-oled-statusd

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fb_step1.c  main.c  oled-statusd  step2_test.c  step3_test.c  step4_test.c  step5_test.c  step6b_test  step6b_test.c  step7_test.c  step8_test.c
assets/: font5x7.h  font5x7_alpha.h  font_jetbrains_mono_8.h  icon_test.h
config/: oled-statusd.conf  oled-statusd.conf.example
core/led/: led_controller.c  led_controller.h
core/state/: libre_config.c  libre_config.h  state.c  state.h
fb/: bitmap.c  bitmap.h  bitmap_loader.c  bitmap_loader.h  draw.c  draw.h  fb.c  fb.h  text.c  text.h
stats/: host.c  host.h  ip.c  ip.h  network.c  network.h  state.c  state.h  system.c  system.h
tests/: fb_step1  step2_test  step2_test.c  step3_test  step3_test.c  step4_test  step4_test.c  step5_test  step5_test.c  step6b_test.c  step7_test  step7_test.c  step8_test  step8_test.c
ui/: render_network.c  render_network.h  render_state.c  render_state.h  screens.h  state_icons.c  state_icons.h  ui_manager.c  ui_manager.h
ui/screens/: hello.c  identity.c  internet.c  libre.c  network.c  splash.c  status.c  system_health.c  traffic.c  uptime.c
